--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,17 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - FASTAPI_PORT
     ports:
       - "${FASTAPI_PORT}:${FASTAPI_PORT}"
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+      DATABASE_URL: postgresql+asyncpg://postgres:${DB_PASSWORD}@db:${DB_PORT}/${DB_NAME}
 
   db:
     image: postgres:15.3
@@ -16,7 +20,6 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
