--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   web:
+    image: "${DOCKER_IMAGE}:${DOCKER_TAG}"
     build:
       context: .
       dockerfile: Dockerfile
