--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,32 @@
 annotated-types==0.5.0
 anyio==3.7.1
 asyncpg==0.28.0
+black==23.7.0
+cfgv==3.4.0
 click==8.1.6
+distlib==0.3.7
 fastapi==0.101.0
+filelock==3.12.2
+flake8==6.1.0
 h11==0.14.0
+identify==2.5.26
 idna==3.4
+isort==5.12.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+nodeenv==1.8.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+pre-commit==3.3.3
+pycodestyle==2.11.0
 pydantic==2.1.1
 pydantic_core==2.4.0
+pyflakes==3.1.0
+PyYAML==6.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.19
 starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.2
+virtualenv==20.24.3
