--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ flake8==6.1.0
 h11==0.14.0
 identify==2.5.26
 idna==3.4
+iniconfig==2.0.0
 isort==5.12.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -18,11 +19,13 @@ nodeenv==1.8.0
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
+pluggy==1.3.0
 pre-commit==3.3.3
 pycodestyle==2.11.0
 pydantic==2.1.1
 pydantic_core==2.4.0
 pyflakes==3.1.0
+pytest==7.4.2
 PyYAML==6.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.19
