--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,44 @@
-annotated-types==0.5.0
+annotated-types==0.6.0
 anyio==3.7.1
-asyncpg==0.28.0
-black==23.7.0
+async-timeout==4.0.3
+asyncpg==0.29.0
+black==23.11.0
+certifi==2023.7.22
 cfgv==3.4.0
-click==8.1.6
+charset-normalizer==3.3.2
+click==8.1.7
+colorclass==2.2.2
 distlib==0.3.7
-fastapi==0.101.0
-filelock==3.12.2
+docopt==0.6.2
+fastapi==0.104.1
+filelock==3.13.1
 flake8==6.1.0
 h11==0.14.0
-identify==2.5.26
+identify==2.5.31
 idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
-packaging==23.1
+packaging==23.2
 pathspec==0.11.2
-platformdirs==3.10.0
+pip-upgrader==1.4.15
+platformdirs==3.11.0
 pluggy==1.3.0
-pre-commit==3.3.3
-pycodestyle==2.11.0
-pydantic==2.1.1
-pydantic_core==2.4.0
+pre-commit==3.5.0
+pycodestyle==2.11.1
+pydantic==2.4.2
+pydantic_core==2.10.1
 pyflakes==3.1.0
-pytest==7.4.2
+pytest==7.4.3
 PyYAML==6.0.1
+requests==2.31.0
 sniffio==1.3.0
-SQLAlchemy==2.0.19
+SQLAlchemy==2.0.23
 starlette==0.27.0
-typing_extensions==4.7.1
-uvicorn==0.23.2
-virtualenv==20.24.3
+terminaltables==3.1.10
+typing_extensions==4.8.0
+urllib3==2.0.7
+uvicorn==0.24.0
+virtualenv==20.24.6
