--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - "${FASTAPI_PORT}:${FASTAPI_PORT}"
     depends_on:
       - db
-    environment:
-      DATABASE_URL: postgresql+asyncpg://postgres:${DB_PASSWORD}@db:${DB_PORT}/${DB_NAME}
+    env_file:
+      - .env
 
   db:
     image: postgres:16.0
@@ -21,8 +21,8 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
