--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,16 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  
+  pg_client:
+    image: postgres:16.0
+    depends_on:
+      - db
+    env_file:
+      - .env
+    volumes:
+      - ./scripts/create_test_db.sh:/create_test_db.sh
+    entrypoint: ["tail", "-f", "/dev/null"]
 
 volumes:
   postgres_data:
