--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ anyio==3.7.1
 asttokens==2.4.1
 async-timeout==4.0.3
 asyncio==3.4.3
-asyncpg==0.29.0
 black==23.11.0
 certifi==2023.7.22
 cfgv==3.4.0
@@ -37,6 +36,7 @@ platformdirs==3.11.0
 pluggy==1.3.0
 pre-commit==3.5.0
 prompt-toolkit==3.0.41
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.11.1
