--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,23 @@
+# Development environment
 FASTAPI_HOST=
 FASTAPI_PORT=
-DB_PORT=
-DB_PASSWORD=
-DB_NAME=
+DATABASE_URL=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PORT=
+DATABASE_PASSWORD=
+DATABASE_NAME=
 DOCKER_IMAGE=
 DOCKER_TAG=
+
+
+# Testing environment
+TEST_FASTAPI_HOST=
+TEST_FASTAPI_PORT=
+TEST_DATABASE_URL=
+TEST_DATABASE_USER=
+TEST_DATABASE_PORT=
+TEST_DATABASE_PASSWORD=
+TEST_DATABASE_NAME=
+TEST_DOCKER_IMAGE=
+TEST_DOCKER_TAG=
