--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,5 +20,19 @@ jobs:
       -
         name: Testing
         run: |
-          cd $GITHUB_WORKSPACE
+          # Create .env file from GitHub secrets
+          secret_names=(
+            FASTAPI_HOST FASTAPI_PORT DATABASE_URL
+            DATABASE_HOST DATABASE_USER DATABASE_PORT 
+            DATABASE_PASSWORD DATABASE_NAME DOCKER_IMAGE 
+            DOCKER_TAG TEST_FASTAPI_HOST TEST_FASTAPI_PORT 
+            TEST_DATABASE_URL TEST_DATABASE_USER TEST_DATABASE_PORT 
+            TEST_DATABASE_PASSWORD TEST_DATABASE_NAME TEST_DOCKER_IMAGE 
+            TEST_DOCKER_TAG
+          )
+
+          for secret_name in "${secret_names[@]}"; do
+            echo "$secret_name=${{ secrets[$secret_name] }}" >> .env
+          done
+
           source scripts/test.sh
