--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: Tests
 
 on:
   push:
@@ -18,21 +18,12 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
-        name: Testing
+        name: Run Tests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Create .env file from GitHub secrets
-          secret_names=(
-            FASTAPI_HOST FASTAPI_PORT DATABASE_URL
-            DATABASE_HOST DATABASE_USER DATABASE_PORT 
-            DATABASE_PASSWORD DATABASE_NAME DOCKER_IMAGE 
-            DOCKER_TAG TEST_FASTAPI_HOST TEST_FASTAPI_PORT 
-            TEST_DATABASE_URL TEST_DATABASE_USER TEST_DATABASE_PORT 
-            TEST_DATABASE_PASSWORD TEST_DATABASE_NAME TEST_DOCKER_IMAGE 
-            TEST_DOCKER_TAG
-          )
+          source scripts/create_env_from_secrets.sh
 
-          for secret_name in "${secret_names[@]}"; do
-            echo "$secret_name=${{ secrets[$secret_name] }}" >> .env
-          done
-
+          # Run tests
           source scripts/test.sh
