--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Login to GitHub with gh CLI
+          gh auth login --with-token <<< "$GH_TOKEN"
+
           # Create .env file from GitHub secrets
           source scripts/create_env_from_secrets.sh
 
