--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,10 +20,26 @@ jobs:
       -
         name: Run Tests
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          TEST_FASTAPI_HOST: ${{ secrets.TEST_FASTAPI_HOST }}
+          TEST_FASTAPI_PORT: ${{ secrets.TEST_FASTAPI_PORT }}
+          TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          TEST_DATABASE_USER: ${{ secrets.TEST_DATABASE_USER }}
+          TEST_DATABASE_PORT: ${{ secrets.TEST_DATABASE_PORT }}
+          TEST_DATABASE_PASSWORD: ${{ secrets.TEST_DATABASE_PASSWORD }}
+          TEST_DATABASE_NAME: ${{ secrets.TEST_DATABASE_NAME }}
+          TEST_DOCKER_IMAGE: ${{ secrets.TEST_DOCKER_IMAGE }}
+          TEST_DOCKER_TAG: ${{ secrets.TEST_DOCKER_TAG }}
         run: |
-          # Create .env file from GitHub secrets
-          source scripts/create_env_from_secrets.sh
+          # Create .env file
+          echo "TEST_FASTAPI_HOST=${TEST_FASTAPI_HOST}" >> .env
+          echo "TEST_FASTAPI_PORT=${TEST_FASTAPI_PORT}" >> .env
+          echo "TEST_DATABASE_URL=${TEST_DATABASE_URL}" >> .env
+          echo "TEST_DATABASE_USER=${TEST_DATABASE_USER}" >> .env
+          echo "TEST_DATABASE_PORT=${TEST_DATABASE_PORT}" >> .env
+          echo "TEST_DATABASE_PASSWORD=${TEST_DATABASE_PASSWORD}" >> .env
+          echo "TEST_DATABASE_NAME=${TEST_DATABASE_NAME}" >> .env
+          echo "TEST_DOCKER_IMAGE=${TEST_DOCKER_IMAGE}" >> .env
+          echo "TEST_DOCKER_TAG=${TEST_DOCKER_TAG}" >> .env
 
           # Run tests
           source scripts/test.sh
