--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,10 +28,11 @@ jobs:
           TEST_DATABASE_PORT: ${{ secrets.TEST_DATABASE_PORT }}
           TEST_DATABASE_PASSWORD: ${{ secrets.TEST_DATABASE_PASSWORD }}
           TEST_DATABASE_NAME: ${{ secrets.TEST_DATABASE_NAME }}
+          TEST_PYTEST_DATABASE_NAME: ${{ secrets.TEST_PYTEST_DATABASE_NAME }}
           TEST_DOCKER_IMAGE: ${{ secrets.TEST_DOCKER_IMAGE }}
           TEST_DOCKER_TAG: ${{ secrets.TEST_DOCKER_TAG }}
         run: |
-          # Create .env file
+          # Create .env file with environment variables
           echo "TEST_FASTAPI_HOST=${TEST_FASTAPI_HOST}" >> .env
           echo "TEST_FASTAPI_PORT=${TEST_FASTAPI_PORT}" >> .env
           echo "TEST_DATABASE_URL=${TEST_DATABASE_URL}" >> .env
@@ -40,6 +41,7 @@ jobs:
           echo "TEST_DATABASE_PORT=${TEST_DATABASE_PORT}" >> .env
           echo "TEST_DATABASE_PASSWORD=${TEST_DATABASE_PASSWORD}" >> .env
           echo "TEST_DATABASE_NAME=${TEST_DATABASE_NAME}" >> .env
+          echo "TEST_PYTEST_DATABASE_NAME=${TEST_PYTEST_DATABASE_NAME}" >> .env
           echo "TEST_DOCKER_IMAGE=${TEST_DOCKER_IMAGE}" >> .env
           echo "TEST_DOCKER_TAG=${TEST_DOCKER_TAG}" >> .env
 
