removing docker and environment configuration to focus on functionality first

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-# Development environment
+ENV=
 FASTAPI_HOST=
 FASTAPI_PORT=
 DATABASE_URL=
@@ -7,17 +7,6 @@ DATABASE_USER=
 DATABASE_PORT=
 DATABASE_PASSWORD=
 DATABASE_NAME=
+PYTEST_DATABASE_NAME=
 DOCKER_IMAGE=
 DOCKER_TAG=
-
-
-# Testing environment
-TEST_FASTAPI_HOST=
-TEST_FASTAPI_PORT=
-TEST_DATABASE_URL=
-TEST_DATABASE_USER=
-TEST_DATABASE_PORT=
-TEST_DATABASE_PASSWORD=
-TEST_DATABASE_NAME=
-TEST_DOCKER_IMAGE=
-TEST_DOCKER_TAG=
