--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==3.7.1
 asttokens==2.4.1
 async-timeout==4.0.3
 asyncio==3.4.3
+bcrypt==4.1.2
 black==23.11.0
 certifi==2023.7.22
 cfgv==3.4.0
@@ -12,6 +13,7 @@ colorclass==2.2.2
 decorator==5.1.1
 distlib==0.3.7
 docopt==0.6.2
+ecdsa==0.18.0
 executing==2.0.1
 fastapi==0.104.1
 filelock==3.13.1
@@ -29,6 +31,7 @@ mypy-extensions==1.0.0
 nodeenv==1.8.0
 packaging==23.2
 parso==0.8.3
+passlib==1.7.4
 pathspec==0.11.2
 pexpect==4.9.0
 pip-upgrader==1.4.15
@@ -39,6 +42,7 @@ prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.6.0
 pycodestyle==2.11.1
 pydantic==1.10.13
 pydantic_core==2.10.1
@@ -47,8 +51,10 @@ Pygments==2.17.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
 python-dotenv==1.0.0
+python-jose==3.3.0
 PyYAML==6.0.1
 requests==2.31.0
+rsa==4.9
 setuptools==69.0.2
 six==1.16.0
 sniffio==1.3.0
