setting up db stuff

--- a/.env_example
+++ b/.env_example
@@ -7,6 +7,11 @@ DATABASE_USER=
 DATABASE_PORT=
 DATABASE_PASSWORD=
 DATABASE_NAME=
+PYTEST_DATABASE_URL=
+PYTEST_DATABASE_HOST=
+PYTEST_DATABASE_USER=
+PYTEST_DATABASE_PORT=
+PYTEST_DATABASE_PASSWORD=
 PYTEST_DATABASE_NAME=
 DOCKER_IMAGE=
 DOCKER_TAG=
