refactor and, updated env files, and created a config class

--- a/.env_example
+++ b/.env_example
@@ -14,3 +14,6 @@ PYTEST_DATABASE_PASSWORD=
 PYTEST_DATABASE_NAME=
 DOCKER_IMAGE=
 DOCKER_TAG=
+SECRET_KEY=
+ALGORITHM=
+ACCESS_TOKEN_EXPIRE_MINUTES=
